--- a/Pipfile
+++ b/Pipfile
@@ -11,8 +11,8 @@ celery = "==5.4.0"
 django-celery-beat = "==2.6.0"
 splinter = "==0.21.0"
 selenium = "==4.20.0"
-psycopg2-binary = "*"
-django-cors-headers = "*"
+psycopg2-binary = "==2.9.9"
+django-cors-headers = "==4.3.1"
 
 [dev-packages]
 
